salesforce/force-app/main/default/objects/D360_Goal_Run__c/D360_Goal_Run__c.object-meta.xml
<CustomObject>
    <description>Execution instance of a Data360 goal pack.</description>
    <label>D360 Goal Run</label>
    <nameField>
        <displayFormat>DGR-{0000}</displayFormat>
        <label>Goal Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>D360 Goal Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>