salesforce/force-app/main/default/objects/D360_Goal_Run__c/fields/Accounts_Identified__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Identified__c</fullName>
    <label>Accounts Identified</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>