salesforce/force-app/main/default/objects/D360_Goal_Run__c/fields/Dataspace__c.field-meta.xml
<CustomField>
    <fullName>Dataspace__c</fullName>
    <label>Dataspace</label>
    <length>80</length>
    <type>Text</type>
</CustomField>