salesforce/force-app/main/default/objects/D360_Goal_Run__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Sandbox</fullName><default>true</default><label>Sandbox</label></value>
            <value><fullName>Production</fullName><default>false</default><label>Production</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>