salesforce/force-app/main/default/objects/D360_Goal_Run__c/fields/Goal_Pack__c.field-meta.xml
<CustomField>
    <fullName>Goal_Pack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goal Pack</label>
    <referenceTo>D360_Goal_Pack__c</referenceTo>
    <relationshipLabel>Goal Runs</relationshipLabel>
    <relationshipName>Goal_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>