salesforce/force-app/main/default/objects/D360_Goal_Run__c/fields/Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Run_Status__c</fullName>
    <label>Run Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>false</default><label>Draft</label></value>
            <value><fullName>Planning</fullName><default>false</default><label>Planning</label></value>
            <value><fullName>Waiting Approval</fullName><default>true</default><label>Waiting Approval</label></value>
            <value><fullName>Executing</fullName><default>false</default><label>Executing</label></value>
            <value><fullName>Succeeded</fullName><default>false</default><label>Succeeded</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>