salesforce/force-app/main/default/objects/D360_Goal_Run__c/fields/Total_Recoverable_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Recoverable_Revenue__c</fullName>
    <label>Total Recoverable Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>