salesforce/force-app/main/default/objects/D360_Goal_Run__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Run_Status__c</columns>
    <columns>Total_Recoverable_Revenue__c</columns>
    <columns>Accounts_Identified__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Goal Runs</label>
</ListView>